k8s/deployment-full.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: llm-playground
  name: llm-playground
---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: llm-playground
  name: llm-playground
  namespace: llm-playground
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: llm-playground
    deployment: llm-playground
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: llm-playground
  name: llm-playground
  namespace: llm-playground
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: llm-playground
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: llm-playground
        deployment: llm-playground
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/llm-playground/llm-playground@sha256:bd43a3fc4b2eb2f17d361d0cf5594b45c428685666bbce5e8afe4116111a6eef
        imagePullPolicy: Always
        name: llm-playground
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: llm-playground
  name: llm-playground
  namespace: llm-playground
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: llm-playground
    weight: 100
  wildcardPolicy: None
